feat: consume activity and media semantics
